--- a/style.css
+++ b/style.css
@@ -2,192 +2,34 @@ body {
    background-color: #18191a;
    font-family: monospace;
    color:rgb(233, 229, 229);
-   padding-bottom: 90px;
-   }
-
-:root {
-   --background: #18191a;
-   --cian:rgb(93, 141, 189);
-}
-
-/* All tags */
-
-hr {
-   width: 30%;
-   margin:auto;
-}
-
-header {
-   margin-top: 90px;
-   width: 70%;
-   margin-left: auto;
-   margin-right: auto;
-}
-
-ul {
-      list-style: none;
-      display: flex;
-      flex-direction: row;
-}
-
-h2 {
-   font-size: 27px;
-}
-
-li {
-   padding-left: 0.7rem;
-   padding-right: 0.7rem;
-}
-
-footer {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-}
-
-section {
-   margin-top: 100px;
-   margin-left: auto;
-   margin-right: auto;
-}
-
-/* All tags */
-
-/* start page css */
-
-#topbar {
-   overflow: hidden;
-   background-color:  #1e1f20;
-   position: relative; 
-   top: 0;
-   right: 0px;
-   width: 100%; 
-   height: 5%;
-   box-shadow: 0 4px 15px rgba(0,0,0,0.1), 0 6px 6px rgba(0,0,0,0.1);
-   z-index: 2;
- }
-
- #topbar a {
-   display: block;
-   color: #f2f2f2;
-   padding: 10px 0px 10px 40px;
-   text-decoration: none;
-   font-size: 20px;
-   width:0%;
- }
-
-
-#startHeader {
-   width: 50%;
-   display: flex;
-   flex-direction: column;
-   align-items:center;
-}
-
-#startHeader li {
-   padding-left: 30px;
-}
-
-.navA {
-   color: white;
-   text-decoration: none;
-}
-.navA:hover {
-   color:rgb(182, 176, 176);
-}
-
-
-.BTN {
-   width: 150px;
-   height: 35px;
-   background-color: #262627;
-   border-radius: 5px;
-   border-width: 0px;
-   transform: scale(1.08);
-   /* box-shadow: 0 10px 20px rgba(0,0,0,0.01), 0 6px 6px rgba(0,0,0,0.01); */
-}
-.BTN:hover {
-   animation-name: hovercolor;
-   animation-duration: 500ms;
-   animation-fill-mode: forwards;
-}
-
-/* start page css */
-
-/* Following pages css */
-
-.button {
-   width: 120px;
-   height: 35px;
-   border-radius: 5px;
-   border-width: 0px;
-   background-color: var(--background);
-   transform: scale(1);
-   padding: 6px 12px 6px 12px;
-}
-.button:hover {
-   animation-name: hovercolor;
-   animation-duration: 500ms;
-   animation-fill-mode: forwards;
-}
-@keyframes hovercolor {
-   100% {
-     background-color:  #3f3f42;
-     color: var(--cian);
-     box-shadow: 0 10px 20px rgba(0,0,0,0.01), 0 6px 6px rgba(0,0,0,0.01);
-   }
-}
-
-
-#myImg {
-   margin-left: auto;
-   margin-right: auto;
-   display: block;
-   max-width: 100%;
-   width: 170px;
-   height: 170px;
-   object-fit: cover;
-   border-radius: 50%;
-}
-
-
-#main {
-   margin-top: 160px;
-}
-
-
-.sectionCertificate
-{
-   display: grid;
-   text-align: center;
-}
-
-.sectionCertificate a {
-   padding-top: 4px;
-   padding-bottom: 4px;
-}
-
-.BT-project {
-   margin-top: 2rem;
-   margin-left: auto;
-   margin-right: auto;
    display: flex;
    justify-content: center;
-   width: 40%;
-}
-
-/* article {
-   width: 50%;
-}
-
-@media (max-width: 1000px) {
-   article {
-      width: 80%;
+   align-items: center;
+   height: 100vh;
+   font-size: 10px;
    }
+
+main {
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+  
 }
 
-@media (max-width: 700px) {
-   article {
-      width: 97%;
-   }
-} */
+div {
+   padding: 20px;
+   width: 300px;
+   max-width: 90%;
+   display: flex;
+   justify-content: space-around;
+   margin: auto;
+}
+
+h2, h3 {
+   font-size: 24px;
+}
+
+a {
+   color: aliceblue;
+   font-size: 4.7em;
+}
