--- a/style.css
+++ b/style.css
@@ -33,3 +33,16 @@ a {
    color: aliceblue;
    font-size: 4.7em;
 }
+
+#apprensentationImg {
+   text-align: center;
+   margin: auto;
+
+}
+
+img {
+   border-radius: 100%;
+   border: 9px solid aliceblue !important;
+   width: 170px;
+   height: 170px;
+}
