--- a/front_end/style.css
+++ b/front_end/style.css
@@ -23,7 +23,8 @@ body {
    counter-reset: ordinal;
 }
 
-#note {
+/* #note {
+   visibility: hidden;
    position: fixed;
    top:0;
    width: 90%;
@@ -43,24 +44,16 @@ body {
    justify-content: center;
    align-items: center;
    font-weight: bolder;
-}
+} */
 
 a {
    text-decoration: none;
 }
 
 #motherContainer {
-   z-index: 2;
    width: 90%;
    max-width: 100%;
    margin: auto;
-}
-
-header {
-   width: 100%;
-   height: 60px;
-   display: flex;
-   justify-content: space-around;
 }
 
 #backgroundContainer {
@@ -82,6 +75,17 @@ header {
    height: 100vh;
 }
 
+
+header {
+   width: 100%;
+   max-width: 100%;
+   height: 60px;
+   display: flex;
+   justify-content: space-around;
+}
+header h1 {
+   font-size: 2.5vmax;
+}
 #logo {
    height: 100%;
    flex: 3;
@@ -115,8 +119,9 @@ ol {
    align-items: center;
    justify-content: center;
    height: 100%;
-   padding-left: 20px;
-   padding-right: 20px;
+   padding-left: 1.5vw;
+   padding-right: 1.5vw;
+   
 }
 #menu li:before {
    counter-increment: ordinal;
