--- a/public/front_end/style.css
+++ b/public/front_end/style.css
@@ -23,7 +23,7 @@ body {
    counter-reset: ordinal;
 }
 
-/* #note {
+#note {
    visibility: hidden;
    position: fixed;
    top:0;
@@ -44,7 +44,7 @@ body {
    justify-content: center;
    align-items: center;
    font-weight: bolder;
-} */
+} 
 
 a {
    text-decoration: none;
