--- a/public/front_end/style.css
+++ b/public/front_end/style.css
@@ -24,14 +24,21 @@ body {
 }
 
 #note {
-   visibility: hidden;
    position: fixed;
    top:0;
    width: 90%;
    height: 100vh;
    background-color: black;
    opacity: 0.9;
+   display:flex;
+   align-items: center;
+   justify-content: center;
 
+}
+
+#note h1 {
+   color: white;
+   font-size: 2em;
 }
 
 #blanktext {
